- Details are shown in a window instead of in the main window
- Added status strip to display welcome and results messages

+ Version 1.4 Released

- Restore points are saved to correct location (v1.4.0.1 released)
- Removed unneeded label in scan dialog
- Updated Russian Translations
- Updated Dutch Translations
- Added Hungarian Translations
- Updated Portuguese Translation
- Updated Polish Translation
- Updated Italian Translations
- Updated Swedish Translations
- Changes registry key rights when removing values and sub keys 
- Added Turkish Translations
- Checks for Common Tools.dll when program starts
- Updated Greek Translations
- Added Lithuanian Translations
- Updated Chinese (Simplified & Traditional) Translations
- Updated Turkish Translations
- Changed bug report URL
- Scans HKCU\Software\Microsoft\Windows\ShellNoRoam\MUICache for invalid file references
- Programs using the Windows Installer can be uninstalled using the uninstall manager
- Uninstall manager is compatible with 64-bit systems
- Creates first system restore when LRC is installed instead of when it first starts
- Updated assembly information

+ Version 1.4.1 Released

- Fixed uninstall manager bug with x86 systems (v1.4.1.1 released)
- Startup manager is compatible with 64-bit systems
- Replaced blank icons with default application icon in startup manager
- Skips nodes with no children from expanding (Thanks to Dmitriy P.)
- Fixed bug that prevented LRC from switching languages on non-english systems (Thanks to Dmitriy P.)
- Reassociated invert selection control with event (Thanks to Dmitriy P.)
- Added localized Properties/Resources.resx files to project (Thanks to Dmitriy P.)
- Added Persian Translations
- Uses a timer instead of invoke to update scanning status
- Updated Swedish Translations
- Ignores registry keys that don't have full access

+ Version 1.4.2 Released

- The DangerousGetHandle() in getRegistryHandle() is no longer casted to IntPtr (Thanks to VSeven)